linux-latest-2.6 (29) UNRELEASED; urgency=low

  * Add xen-linux-system-2.6-* meta-packages (Closes: #402414)

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 01 Aug 2010 23:24:48 +0100

linux-latest-2.6 (28) unstable; urgency=low

  * Move NEWS from linux-2.6, since apt-listchanges only shows it for
    upgraded packages
  * Add linux-tools-2.6 meta package
  * Change versions for linux-doc-2.6 and linux-source-2.6 to match those
    of the other meta packages

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 06 Jul 2010 14:39:54 +0100

linux-latest-2.6 (27) unstable; urgency=low

  * Really build linux-doc-2.6 and linux-source-2.6 meta packages

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 04 May 2010 02:23:44 +0100

linux-latest-2.6 (26) unstable; urgency=low

  [ Joachim Breitner ]
  * Create linux-doc-2.6 and linux-source-2.6 meta packages (Closes: 347284)

  [ Ben Hutchings ]
  * Update to 2.6.32-5.
  * Update standards-version to 3.8.4; no changes required.
  * Explicitly describe all packages as meta-packages.

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 04 May 2010 02:10:04 +0100

linux-latest-2.6 (25) unstable; urgency=high

  * Update package description templates in line with linux-2.6.
  * Update to 2.6.32-3.
  * Set urgency to 'high' since this must transition with linux-2.6.

 -- Ben Hutchings <ben@decadent.org.uk>  Wed, 10 Mar 2010 00:43:47 +0000

linux-latest-2.6 (24) unstable; urgency=low

  * Update to 2.6.32-2.

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 16 Feb 2010 21:43:50 +0000

linux-latest-2.6 (23) unstable; urgency=low

  * Update to 2.6.32-trunk.

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 17 Dec 2009 03:31:19 +0000

linux-latest-2.6 (22) unstable; urgency=low

  * Update to 2.6.31-1.

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 25 Oct 2009 18:33:06 +0000

linux-latest-2.6 (21) unstable; urgency=low

  [ Bastian Blank ]
  * Update to 2.6.30-2.

  [ Ben Hutchings ]
  * Add myself to uploaders.
